--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio - KABORE Soumaila</title>
   <!-- Lien vers la feuille de style CSS -->
-  <link rel="stylesheet" href="Styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -38,7 +38,7 @@
     </div>
     <div class="hero-illustration">
       <!-- Remplacez cette image par l'illustration de votre choix -->
-      <img src="imgs/dev.webp" alt="Illustration Hero">
+      <img src="img/dev.webp" alt="Illustration Hero">
     </div>
   </section>
 
@@ -52,7 +52,7 @@
       <!-- Photo de profil -->
       <div class="profile-pic">
         <!-- Remplacez cette image par la photo de votre choix -->
-        <img src="imgs/soum.webp" alt="Photo de profil">
+        <img src="img/soum.webp" alt="Photo de profil">
       </div>
       <!-- Texte de présentation -->
       <div class="about-text">
@@ -193,6 +193,6 @@
   </footer>
 
   <!-- Lien vers le fichier JavaScript -->
-  <script src="JS/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
